<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    
    <string name="app_name">Readability</string>
        
    <!-- Extension -->
    <string name="extension_name">Readability</string>
    <string name="extension_description">Description for Readability</string>
    <string name="extension_settings_title">Settings</string>
    <string name="extension_login_title">Login</string>
    
    <string name="msg_login_running">Login…</string>
    <string name="msg_login_fail">Login failure</string>
    
    <!-- login -->
    <string name="login_welcome">Enter your login data (username and password)</string>
    <string name="login_server">Server (http://google.com)</string>
    <string name="login_id">Username</string>
    <string name="login_password">Password</string>
                
    <string name="txt_login">Login</string>
    <string name="txt_start_app">Start News+</string>
    <string name="txt_download_app">Download News+</string>
    <string name="txt_feedback">Feedback</string>
    
    <!-- err -->
    <string name="err_io">Network error</string>
    
    <!-- client -->
    <string name="client_readability">Readability</string>
    
    <string name="readability_login_welcome"></string>
    
</resources>
    